--- a/thesis/Implementation.lyx
+++ b/thesis/Implementation.lyx
@@ -5925,6 +5925,13 @@ grouping the changes
 
 \begin_layout Subsection
 Open Issues
+\begin_inset CommandInset label
+LatexCommand label
+name "sub:Open-Issues"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
